Update 3. Hello World Screenshot.md

--- a/assignment01/3. Hello World Screenshot.md
+++ b/assignment01/3. Hello World Screenshot.md
@@ -1,1 +1,1 @@
-![Hello World Screenshot](/images/Hello World Screenshot.pngraw=true)
+![Hello World Screenshot](images/Hello World Screenshot.pngraw=true)
