--- a/assignment01/3. Hello World Screenshot.md
+++ b/assignment01/3. Hello World Screenshot.md
@@ -1,1 +1,1 @@
-![Hello World Screenshot](/images/Hello%World%Screenshot.png)
+![Hello World Screenshot  ](https://raw.githubusercontent.com/byzhong/embsys310/main/assignment01/images/Hello%20World%20Screenshot.png)
